fix padding spacing issues

--- a/src/block-globals.editor.scss
+++ b/src/block-globals.editor.scss
@@ -16,6 +16,10 @@
 
 }
 
+.components-panel__body .padding-sides-wrapper > .components-base-control {
+	margin-bottom: 0;
+}
+
 .components-panel__body .editor-block-types-list__list-item .editor-block-types-list__item .editor-block-types-list__item-icon .block-editor-block-icon {
 	width: 48px;
 	height: 48px;
